lib/dslEngine/grammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = "if",
      peg$c1 = peg$literalExpectation("if", false),
      peg$c2 = "If",
      peg$c3 = peg$literalExpectation("If", false),
      peg$c4 = ",",
      peg$c5 = peg$literalExpectation(",", false),
      peg$c6 = ".",
      peg$c7 = peg$literalExpectation(".", false),
      peg$c8 = "E",
      peg$c9 = peg$literalExpectation("E", false),
      peg$c10 = "e",
      peg$c11 = peg$literalExpectation("e", false),
      peg$c12 = "lse",
      peg$c13 = peg$literalExpectation("lse", false),
      peg$c14 = function(condition, instruction, elseStatement) {
      	return {
      		command: 'conditionalStatement',
      		condition: condition,
      		instruction: instruction,
      		elseInstruction: elseStatement
      	}	
      },
      peg$c15 = "link",
      peg$c16 = peg$literalExpectation("link", false),
      peg$c17 = "with",
      peg$c18 = peg$literalExpectation("with", false),
      peg$c19 = "as",
      peg$c20 = peg$literalExpectation("as", false),
      peg$c21 = function(e1, e2, e1ToE2Relation) {
            return {
              command: 'link',
              e1: e1,
              e2: e2,
              e1ToE2Relation: e1ToE2Relation
            }
          },
      peg$c22 = "unlink",
      peg$c23 = peg$literalExpectation("unlink", false),
      peg$c24 = function(e1, e2, e1ToE2Relation) {
            return {
              command: 'unlink',
              e1: e1,
              e2: e2,
              e1ToE2Relation: e1ToE2Relation
            }
          },
      peg$c25 = "unset",
      peg$c26 = peg$literalExpectation("unset", false),
      peg$c27 = "Do deep update",
      peg$c28 = peg$literalExpectation("Do deep update", false),
      peg$c29 = function(entityWithProperty, deepUpdate) {
          return {
            command: 'unset',
            docWithPath: entityWithProperty,
            deepUpdate: deepUpdate
          }
        },
      peg$c30 = function(update) {
          return update
        },
      peg$c31 = "at",
      peg$c32 = peg$literalExpectation("at", false),
      peg$c33 = "in",
      peg$c34 = peg$literalExpectation("in", false),
      peg$c35 = "to",
      peg$c36 = peg$literalExpectation("to", false),
      peg$c37 = function(command, val, docWithPath, deepUpdate) {
            return {
              command: command,
              docWithPath: docWithPath,
              deepUpdate: deepUpdate,
              value: val
            }
          },
      peg$c38 = " is",
      peg$c39 = peg$literalExpectation(" is", false),
      peg$c40 = " are",
      peg$c41 = peg$literalExpectation(" are", false),
      peg$c42 = function(assignee, value, conditionalAssignment, deepUpdate) {
          const res = {
            command: 'assignment',
            assignee: assignee,
            assignment: value,
            deepUpdate: deepUpdate
          }
          if (conditionalAssignment) {
            _.extend(res, conditionalAssignment)
          }
          return res
        },
      peg$c43 = " if",
      peg$c44 = peg$literalExpectation(" if", false),
      peg$c45 = "Else ",
      peg$c46 = peg$literalExpectation("Else ", false),
      peg$c47 = "is",
      peg$c48 = peg$literalExpectation("is", false),
      peg$c49 = "are",
      peg$c50 = peg$literalExpectation("are", false),
      peg$c51 = function(condition, elseAssignment) {
          return {
            condition: condition,
            elseAssignment: elseAssignment && _.last(elseAssignment),
          }
        },
      peg$c52 = function(expr) {
          return expr
        },
      peg$c53 = "?",
      peg$c54 = peg$literalExpectation("?", false),
      peg$c55 = " strict",
      peg$c56 = peg$literalExpectation(" strict", false),
      peg$c57 = function(left, right, strict) { 
          return {
            command: 'boolExpression',
            subCommand: 'isEqual',
            left: left,
            right: right[1],
            strict: strict
          }
        },
      peg$c58 = " is one of",
      peg$c59 = peg$literalExpectation(" is one of", false),
      peg$c60 = " or ",
      peg$c61 = peg$literalExpectation(" or ", false),
      peg$c62 = function(left, list, strict) { 
      		//list: [[null,"eitherThis"],[[" or ",[null,"orThis"]],[" or ",[null,"orThat"]]]]
      		let right
      		if (list[1]) {
      			right = list[1].map((entry) => entry[1]) //Strip or
      			right = right.map((entry) => entry[1]) //Strip null
      			right.push(list[0][1])
      		} else {
      			right = list[0][1]
      		}
          return {
            command: 'boolExpression',
            subCommand: 'isOneOf',
            left: left,
      			right: right,
            strict: strict
          }
        },
      peg$c63 = " not",
      peg$c64 = peg$literalExpectation(" not", false),
      peg$c65 = " empty",
      peg$c66 = peg$literalExpectation(" empty", false),
      peg$c67 = function(val, negation) {
          return {
            command: 'boolExpression',
            subCommand: 'emptinessCheck',
            val: val,
            negation: negation
          }
        },
      peg$c68 = "index",
      peg$c69 = peg$literalExpectation("index", false),
      peg$c70 = " as type",
      peg$c71 = peg$literalExpectation(" as type", false),
      peg$c72 = function(entity, type) {
            return {
              command: 'index',
              entity: entity,
              type: type && type[1]
            }
          },
      peg$c73 = "async",
      peg$c74 = peg$literalExpectation("async", false),
      peg$c75 = " as",
      peg$c76 = peg$literalExpectation(" as", false),
      peg$c77 = function(func, args, as) {
           return {
              command: 'async',
              func: func,
              args: _(args).flatten().compact().value(),
              as: as
            }
          },
      peg$c78 = "get",
      peg$c79 = peg$literalExpectation("get", false),
      peg$c80 = function(type, id, as, joins) {
            return _.omit({
              command: 'get',
              type: type,
              id: id,
              as: as,
              joins: joins && joins.joins
            }, _.isUndefined)
          },
      peg$c81 = "search",
      peg$c82 = peg$literalExpectation("search", false),
      peg$c83 = " first",
      peg$c84 = peg$literalExpectation(" first", false),
      peg$c85 = /^[.]/,
      peg$c86 = peg$classExpectation(["."], false, false),
      peg$c87 = "Create if not exists",
      peg$c88 = peg$literalExpectation("Create if not exists", false),
      peg$c89 = function(oneOnly, type, where, as, joins, createIfNeeded) {
            if (as && as.endsWith('.')) {
              as = as.substr(0, as.length -1)
            }
            return _.omit({
              command: 'search',
              type: type,
              where: where,
              getFirst: oneOnly,
              as: as,
              joins: joins && joins.joins,
              createIfNeeded: createIfNeeded
            }, _.isUndefined)
          },
      peg$c90 = "iterate over",
      peg$c91 = peg$literalExpectation("iterate over", false),
      peg$c92 = function(index, where, as, from, size) {
          return {
            command: 'iterateOverIndex',
            index: index,
            as: as || index.slice(0, -1),
            batchSize: size,
            from: from,
            where: where
          }
        },
      peg$c93 = /^[S\/s]/,
      peg$c94 = peg$classExpectation(["S", "/", "s"], false, false),
      peg$c95 = "kip",
      peg$c96 = peg$literalExpectation("kip", false),
      peg$c97 = function(size) {
          return size
        },
      peg$c98 = /^[G\/g]/,
      peg$c99 = peg$classExpectation(["G", "/", "g"], false, false),
      peg$c100 = "et",
      peg$c101 = peg$literalExpectation("et", false),
      peg$c102 = "at a time",
      peg$c103 = peg$literalExpectation("at a time", false),
      peg$c104 = "Join from",
      peg$c105 = peg$literalExpectation("Join from", false),
      peg$c106 = function(joinType) {
          return {
            joins: joinType
          }
        },
      peg$c107 = " where ",
      peg$c108 = peg$literalExpectation(" where ", false),
      peg$c109 = function(jsonOrWord) {
            return jsonOrWord
          },
      peg$c110 = "S",
      peg$c111 = peg$literalExpectation("S", false),
      peg$c112 = "s",
      peg$c113 = peg$literalExpectation("s", false),
      peg$c114 = "top here",
      peg$c115 = peg$literalExpectation("top here", false),
      peg$c116 = function() {
      	return {
      		command: 'stop'
      	}
      },
      peg$c117 = " ",
      peg$c118 = peg$literalExpectation(" ", false),
      peg$c119 = "\t",
      peg$c120 = peg$literalExpectation("\t", false),
      peg$c121 = "\"",
      peg$c122 = peg$literalExpectation("\"", false),
      peg$c123 = function(w) {
          const firstWord = w[0]
          if (_.isEmpty(w[1])) {
            return firstWord
          }
          const restWords = w[1].map((entry) => entry[1])
          return firstWord + '.' + restWords.join('.')
        },
      peg$c124 = /^[*_$\-]/,
      peg$c125 = peg$classExpectation(["*", "_", "$", "-"], false, false),
      peg$c126 = function(w) {
          const word = w.join('').trim()
          if (/^\d+$/.test(word)) {
            return +word
          } else {
            return word
          }
        },
      peg$c127 = "{",
      peg$c128 = peg$literalExpectation("{", false),
      peg$c129 = "}",
      peg$c130 = peg$literalExpectation("}", false),
      peg$c131 = function(p) {
            var result = "{" + _(p).flatten().compact().value().join(', ') + "}"
            return JSON.parse(result)
          },
      peg$c132 = "[",
      peg$c133 = peg$literalExpectation("[", false),
      peg$c134 = "]",
      peg$c135 = peg$literalExpectation("]", false),
      peg$c136 = function(list) {
          let val =  _.map(list, (value) => value[0])
          return val
        },
      peg$c137 = ":",
      peg$c138 = peg$literalExpectation(":", false),
      peg$c139 = function(key, val) {
            key = key.startsWith('"') ? key : '"' + key + '"'
            if (_.isNumber(val) || _.isBoolean(val) || _.isUndefined(val) || _.isNull(val) || _.startsWith(val, '"')) {
              return key + ': ' + val
            }
            return key + ': ' + ('"' + val + '"')
          },
      peg$c140 = function(val) {
          return _.isArray(val) && _.compact(val)[0] || val
        },
      peg$c141 = function(w) {
          return '"' + w + '"'
        },
      peg$c142 = /^[a-zA-Z0-9]/,
      peg$c143 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
      peg$c144 = function(varName) {
            return varName
          },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseconditionalStatement();
    if (s0 === peg$FAILED) {
      s0 = peg$parsestatement();
    }

    return s0;
  }

  function peg$parsestatement() {
    var s0;

    s0 = peg$parseget();
    if (s0 === peg$FAILED) {
      s0 = peg$parsesearch();
      if (s0 === peg$FAILED) {
        s0 = peg$parseasync();
        if (s0 === peg$FAILED) {
          s0 = peg$parseindex();
          if (s0 === peg$FAILED) {
            s0 = peg$parselink();
            if (s0 === peg$FAILED) {
              s0 = peg$parseunlink();
              if (s0 === peg$FAILED) {
                s0 = peg$parseassignment();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseunset();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseiterate();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parsestopHere();
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseconditionalStatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }
    if (s1 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c2) {
        s1 = peg$c2;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsespace();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsebooleanExpression();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsespace();
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsespace();
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 === peg$FAILED) {
            s4 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 44) {
              s5 = peg$c4;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parsespace();
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parsespace();
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsestatement();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 46) {
                s6 = peg$c6;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c7); }
              }
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parsespace();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parsespace();
                }
                if (s7 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 69) {
                    s8 = peg$c8;
                    peg$currPos++;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c9); }
                  }
                  if (s8 === peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 101) {
                      s8 = peg$c10;
                      peg$currPos++;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c11); }
                    }
                  }
                  if (s8 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 3) === peg$c12) {
                      s9 = peg$c12;
                      peg$currPos += 3;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c13); }
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parsestart();
                      if (s10 === peg$FAILED) {
                        s10 = null;
                      }
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c14(s3, s5, s10);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parselink() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c15) {
      s1 = peg$c15;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseword();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsespace();
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsespace();
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c17) {
            s4 = peg$c17;
            peg$currPos += 4;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c18); }
          }
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parsespace();
            if (s6 !== peg$FAILED) {
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parsespace();
              }
            } else {
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseword();
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parsespace();
                if (s8 !== peg$FAILED) {
                  while (s8 !== peg$FAILED) {
                    s7.push(s8);
                    s8 = peg$parsespace();
                  }
                } else {
                  s7 = peg$FAILED;
                }
                if (s7 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c19) {
                    s8 = peg$c19;
                    peg$currPos += 2;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c20); }
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = [];
                    s10 = peg$parsespace();
                    if (s10 !== peg$FAILED) {
                      while (s10 !== peg$FAILED) {
                        s9.push(s10);
                        s10 = peg$parsespace();
                      }
                    } else {
                      s9 = peg$FAILED;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseword();
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c21(s2, s6, s10);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseunlink() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;
